# OpenGL-Sandbox

./: CMakeLists.txt  README.md  Shader.cpp  Shader.h  glad.c  main.cpp  shaderHandler.cpp  shaderHandler.h  vertexdata.h
include/glad/: glad.c  glad.h
mrn/: Camera.cpp  Camera.h  FontRenderer.cpp  FontRenderer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Polygon.cpp  Polygon.h  Primitives.cpp  Primitives.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Vertex.h  polygon_data.h
mrn/camera/: Camera.cpp  Camera.h
shader/: default.frag  default.vert  font.frag  font.vert  red.frag  rotate.vert  simple.vert  texture.frag  texture.vert  uniformColor.frag  yellow.frag
